unused/bookstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstack
  name: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - env:
            - name: APP_URL
            - name: DB_DATABASE
              value: bookstackapp
            - name: DB_HOST
              value: bookstack_db
            - name: DB_PASS
              value: dbpass
            - name: DB_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: lscr.io/linuxserver/bookstack
          name: bookstack
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: media
              subPath: bookstack/data
        - env:
            - name: MYSQL_DATABASE
              value: bookstackapp
            - name: MYSQL_PASSWORD
              value: dbpass
            - name: MYSQL_ROOT_PASSWORD
              value: dbpass
            - name: MYSQL_USER
              value: bookstack
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/New_York
          image: lscr.io/linuxserver/mariadb
          name: bookstack-db
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: media
              subPath: bookstack/db
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
status: {}
