unused/bookstack/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("bookstack.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: bookstack
          port: 80
